--- a/KPK_CalcSite/Views/Home/About.cshtml
+++ b/KPK_CalcSite/Views/Home/About.cshtml
@@ -10,7 +10,7 @@
 </p>
 
 <div class="row">
-    <div class="col-md-6">
+    <div class="col-md-6 fade">
         <h3>@Html.ActionLink("Snow load calculator", "Calculator", "SnowLoads")</h3>
         <p>
             Mostly based on <i>Eurocode 1 - Actions on structures Part 1-3: General actions - Snow loads</i> with Polish national annex.
