Parameter form adjusted.

--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.html
@@ -1,7 +1,7 @@
 ﻿
 <mat-form-field>
     <input matInput
-           required
+           [required]="isRequired()"
            autocomplete="off"
            [(ngModel)]="parameter.value"
            (change)="changeValue()">
