--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/select/parameter-select.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/select/parameter-select.component.html
@@ -1,8 +1,9 @@
 ﻿<mat-form-field>
     <mat-label [innerHtml]="parameter.name | html"></mat-label>
     <mat-select [(ngModel)]="parameter.value"
-                required
+                [required]="isRequired()"
                 (selectionChange)="changeValue()">
+        <mat-option *ngIf="!isRequired()"> </mat-option>
         <mat-option *ngFor="let valueOption of parameter.valueOptions"
                     [value]="valueOption.value">
             {{valueOption.name }}
