Snow load services.

--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/autocomplete/parameter-autocomplete.component.html
@@ -16,7 +16,8 @@
 </mat-form-field>
 
 <mat-autocomplete #auto="matAutocomplete"
-                  autoActiveFirstOption >
+                  autoActiveFirstOption>
+    <mat-option *ngIf="!isRequired()"> </mat-option>
     <mat-option *ngFor="let valueOption of filteredValueOptions | async"
                 [value]="valueOption.value">
         {{valueOption.name }}
