--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/radio/parameter-radio.component.html
@@ -9,7 +9,7 @@
                           selected
                           class="mr-3"
                           (change)="changeValue($event)">
-            none
+            default
         </mat-radio-button>
         <mat-radio-button *ngFor="let valueOption of parameter.valueOptions; index as i"
                           [value]="valueOption.value"
