--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/parameters-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/parameters-form.component.html
@@ -68,6 +68,7 @@
         <app-data-parameter-form [newlyAddedParameter]="newlyAddedParameter"
                                  [scriptId]="scriptId"
                                  [newParameter]="newParameter"
-                                 (created)="onCreated($event)"></app-data-parameter-form>
+                                 (created)="onCreated($event)"
+                                 (updated)="onUpdated($event)"></app-data-parameter-form>
     </div>
 </div>
