--- a/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
+++ b/Build_IT_Web/ClientApp/app/components/nav-menu/nav-menu.component.html
@@ -26,7 +26,7 @@
                 [routerLinkActiveOptions]='{ exact: true }'>
                 <a class="nav-link"
                    [routerLink]="['/scripts/new']">
-                    <span class="fa fa-file-text-o"></span> New script
+                    <span class="fa fa-file-code"></span> New script
                 </a>
             </li>
             <li class="nav-item dropdown">
@@ -49,13 +49,22 @@
                         <span class="fa fa-snowman"></span> Snow Loads
                     </a>
                     <!--<a class="dropdown-item" href="#">Another action</a>
-    <div class="dropdown-divider"></div>
-    <a class="dropdown-item" href="#">Something else here</a>-->
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>-->
                 </div>
             </li>
+
+            <li class="nav-item"
+                [routerLinkActive]='["link-active"]'
+                [routerLinkActiveOptions]='{ exact: true }'>
+                <a class="nav-link"
+                   [routerLink]="['/about']">
+                    <span class="fa fa-user-circle"></span> About
+                </a>
+            </li>
             <!--<li class="nav-item">
-                <a class="nav-link disabled" href="#">Disabled</a>
-            </li>-->
+        <a class="nav-link disabled" href="#">Disabled</a>
+    </li>-->
         </ul>
         <!--<form class="form-inline my-2 my-lg-0">
             <input class="form-control mr-sm-2"
