--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/data-parameter-form.component.html
@@ -155,10 +155,27 @@
             </mat-error>
         </mat-form-field>
 
+        <div *ngIf="parameterId.value > 0">
+            <label for="singleFile">Upload file</label>
+            <input id="singleFile"
+                   type="file"
+                   [fileUploadInputFor]="fileUploadQueue" />
+            <br>
+
+            <mat-file-upload-queue #fileUploadQueue
+                                   [fileAlias]="'file'"
+                                   [httpUrl]="'http://localhost:8040/api/parameters/{{parameterId.value}}/photos'">
+
+                <mat-file-upload [file]="file"
+                                 [id]="i"
+                                 *ngFor="let file of fileUploadQueue.files; let i = index"></mat-file-upload>
+            </mat-file-upload-queue>
+        </div>
+
         <div class="full-width">
             <button mat-stroked-button color="accent"
                     type="submit">
                 {{ newlyAddedParameter ? 'Add' : 'Update'}}
             </button>
-        </div>     
+        </div>
     </form>
