--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/value-options-form/value-options-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/value-options-form/value-options-form.component.html
@@ -6,7 +6,7 @@
                 Value Options
             </mat-panel-title>
             <mat-panel-description>
-                Provide some default data
+                Provide some selectable data
             </mat-panel-description>
         </mat-expansion-panel-header>
 
@@ -23,12 +23,6 @@
                                       class="ml-2">Is boolean</mat-radio-button>
                 </mat-radio-group>
             </div>
-            <!--<mat-checkbox (change)="allValuesChecked($event)"
-                  class="ml-2">Allow any values</mat-checkbox>
-
-    <mat-checkbox (change)="booleanChecked($event)"
-                  [value]="2"
-                  class="ml-2">Is boolean</mat-checkbox>-->
 
             <div *ngIf="parameterValueOptionSetting.value != valueOptionSettings.Boolean">
                 <ul *ngFor="let valueOption of parameterValueOptions.controls; let i = index">
@@ -52,9 +46,6 @@
                                        [errorStateMatcher]="matcher"
                                        autocomplete="off" />
                                 <mat-hint>Value</mat-hint>
-                                <!--<mat-error *ngIf="parameterDocument && parameterDocument.hasError('maxlength')">
-                        Document should be maximum {{parameterDocument.errors.maxlength.requiredLength}} characters long.
-                    </mat-error>-->
                             </mat-form-field>
 
                             <mat-form-field class="m-2 form-medium">
@@ -64,10 +55,6 @@
                                           [errorStateMatcher]="matcher"
                                           autocomplete="off"></textarea>
                                 <mat-hint>Description for value option</mat-hint>
-                                <!--<mat-error *ngIf="parameterValue && parameterValue.hasError('maxlength')">
-                                                    Value should be maximum {{parameterValue.errors.maxlength.requiredLength}} characters long.
-                                                        </mat-error>
-                    -->
                             </mat-form-field>
 
                             <button mat-stroked-button
