--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/figure-parameter-form/figure-parameter-form.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-form/parameters-form/data-parameter-form/figure-parameter-form/figure-parameter-form.component.html
@@ -14,6 +14,7 @@
                #fileInput />
 
         <div class="mt-1">
+            <!--<button mat-raised-button (click)="pickExistingDialog()">Pick existing</button>-->
             <img *ngFor="let figure of figures"
                  src="clientapp/uploads/{{parameterId.value}}/{{figure.fileName}}"
                  alt="Parameter picture" />
