--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-inputs/input/parameter-input.component.html
@@ -2,6 +2,7 @@
     <input matInput
            [required]="isRequired()"
            autocomplete="off"
+           [ngClass]="parameter.name"
            [attr.type]="parameter.valueType == 0 ? 'number' : 'text'"
            [(ngModel)]="parameter.value"
            (change)="changeValue()">
