--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/parameter-results/parameter-result/parameter-result.component.html
@@ -9,7 +9,7 @@
                         {{parameter.value | toNumber | number:'1.0-3'}}
                     </span>
                     <ng-template #textValue>
-                        <span>{{parameter.value}}</span>
+                        <span [ngClass]="parameter.name">{{parameter.value}}</span>
                     </ng-template>
                     <span [innerHtml]="parameter.unit | html"></span>
                 </p>
