--- a/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
+++ b/Build_IT_Web/ClientApp/app/modules/script-interpreter/components/script-calculator/script-calculator.component.html
@@ -57,6 +57,7 @@
          *ngIf="visibleParameters">
         <button mat-stroked-button
                 color="accent"
+                class="calculate"
                 type="button"
                 [disabled]="!isValid()"
                 (click)="calculate()">
